Add a p tag and made changes to a div with css.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
         </section>
         <!-- About me -->
         <section>
-            <h2 id="abme">About Me</h2>
-            <p class="myName">Who is Olivia Lewis and what is she capable of?</p>
+            <div class="question">
+                <h2 id="abme">About Me</h2>
+                <p class="myName">Who is Olivia Lewis and what is she capable of?</p>
+            </div>
+            
             <div class="s2">
                 <img src="./images/me.jpeg" class="me" alt="me">
                 <p>
