added a p tag and div to contact info section.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <p class="pop">Full Stack Engineer</p>
             </div>
         </section>
+
         <!-- About me -->
         <section>
             <div class="question">
@@ -48,7 +49,7 @@
             </div>
         </section>
 
-        <!-- Projects -->
+        <!-- Project Cards -->
         <section>
             <h2 class="zoom" id="projects">Projects</h2>
             <div class="s3">
@@ -111,7 +112,12 @@
     </main>
 
     <footer>
-        <h2 id="contact">Contact</h2>
+        <!-- Contact Infomation -->
+        <div class="question">
+            <p class="myName">For all software/web development services please...</p>
+            <h2 id="contact">Contact Me</h2>
+        </div>
+        
         <div class="s4">
             <form>
                 <div>
