Deleted unused styles.

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
             </form>
         </div>
         <div class="icon">
-            <button class="bt">
+            <button>
                 <a href="https://github.com/L3w15DM"><i class="fa-brands fa-github"></i></a>
             </button>
             <h4 class="myName">Social Media</h4>
-            <button class="bt">
+            <button>
                 <a href="https://www.linkedin.com/in/olivia-lewis-247946277"><i class="fa-brands fa-linkedin" style="color: #254b8d;"></i></a>
             </button>
         </div>
