Correct spelling errors

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   My problem-solving is rooted in practicality and efficiency, translating real-world solutions for clients. 
                   Navigating the realms of code as a future developer, my journey mirrors the precision of a well-maneuvered truck on the open road.
                   My shift from trucking to coding signifies not just a change in career but a testament to my adaptability and determination to master new horizons.
-                  Over the past year and a half I have delved into both frontend and backend technologies, mastering languages like HMTL5, CSS3, JavaScript, React, CSharp,
+                  Over the past year and a half I have delved into both frontend and backend technologies, mastering languages like HTML5, CSS3, JavaScript, React, CSharp,
                   ASP.NET CORE, SQL, and .NET. And more to come including Python, Tailwind CSS, and Angular to name a few.
                 </p>
             </div>
